trying to fix flickering issue and floated icon issue

--- a/www/css/hamApp.css
+++ b/www/css/hamApp.css
@@ -475,7 +475,7 @@ a.homeicon.ui-btn {
 }
 
 #bkg {
-    position: fixed;
+    position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
@@ -502,4 +502,18 @@ a.homeicon.ui-btn {
 }
 .news-navbarcont > .xnavbar > li > a {
   height: initial;
+}
+
+ 
+            /* #container div with absolute position and 100% width and height so it takes up whole window */
+#container {
+  padding:0;
+  margin:0;
+    position: absolute;
+  top:0;
+  bottom:0
+    left:0;
+  right:0;
+    width: 100%;
+    height: 100%;
 }
